Fix potential race in AudioMediaStreamTrackRendererCocoa::pushSamples https://bugs.webkit.org/show_bug.cgi?id=232430

Reviewed by Eric Carlson.

In case we start a AudioMediaStreamTrackRendererCocoa, and we quickly stop it, there may be a time
where we create an AudioSampleDataSource from a background thread, then hop to main thread.
We would then register it to the rendering unit even if the AudioMediaStreamTrackRendererCocoa is cleared.
The AudioSampleDataSource would then be kept registered with no data which would be wasteful in terms of CPU.
To fix this, we keep m_dataSource but introduce a m_registeredDataSource.
m_registeredDataSource is only manipulated in main thread and is the one that is registered/unregistered to the rendering unit.
m_dataSource is only accessed from background thread.

Manually tested and covered by added assertion in AudioMediaStreamTrackRendererCocoa destructor.

* platform/mediastream/cocoa/AudioMediaStreamTrackRendererCocoa.cpp:
(WebCore::AudioMediaStreamTrackRendererCocoa::~AudioMediaStreamTrackRendererCocoa):
(WebCore::AudioMediaStreamTrackRendererCocoa::clear):
(WebCore::AudioMediaStreamTrackRendererCocoa::setRegisteredDataSource):
(WebCore::AudioMediaStreamTrackRendererCocoa::pushSamples):
(WebCore::pollSamplesCount): Deleted.
* platform/mediastream/cocoa/AudioMediaStreamTrackRendererCocoa.h:



Canonical link: https://commits.webkit.org/243668@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@285024 268f45cc-cd09-0410-ab3c-d52691b4dbfc