Source/WebCore/platform/mediastream/cocoa/AudioMediaStreamTrackRendererCocoa.h
@@ -57,9 +57,11 @@ private:
     void setAudioOutputDevice(const String&) final;
 
     void reset();
+    void setRegisteredDataSource(RefPtr<AudioSampleDataSource>&&);
 
     std::unique_ptr<CAAudioStreamDescription> m_outputDescription;
-    RefPtr<AudioSampleDataSource> m_dataSource;
+    RefPtr<AudioSampleDataSource> m_dataSource; // Used in background thread.
+    RefPtr<AudioSampleDataSource> m_registeredDataSource; // Used in main thread.
     bool m_shouldRecreateDataSource { false };
     WebCore::AudioMediaStreamTrackRendererUnit::ResetObserver m_resetObserver;
 };
